--- a/css/play.css
+++ b/css/play.css
@@ -2,6 +2,13 @@
 padding: 0;
 box-sizing: border-box;}
 *::before, *::after{ box-sizing: border-box;}
+*{transition: all .3s;}
+ -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+a{
+	outline:none;
+   -moz-outline-style:none;
+ }
  .icon {
        width: 1em; height: 1em;
        vertical-align: -0.15em;
@@ -18,10 +25,9 @@ outline: none;}
 	}
 }
 
-
 .page{display: flex;
 	flex-direction: column;
-	background:transparent url(http://p3.music.126.net/sH3PZLAL9hS0bq3k_flvNQ==/18263987649504977.jpg);
+	background:transparent url(http://p9sfbm7t8.bkt.clouddn.com/tongyong.jpg);
 	background-size:cover;
 	background-repeat:no-repeat;
 	height: 100vh;
@@ -155,9 +161,15 @@ height: 4vh;
   padding-top: 8vh;
 }
   
-  .lyric p{ font-size: 14px;
+  .lyric .lines p{ font-size: 16px;
   text-align: center;
   color: #dedede;
-  line-height: 24px;}
+  line-height: 28px;
+  color: #999;}
+  .lyric .lines p.active{color:#fff;}
+  .lyric .lines{ 
+  	margin-top:66%;
+}
+  
 
   
